[package]
name = "rsx"
version = "0.1.0"
authors = ["Vladislav Mamon <norskeld@gmail.com>"]
description = "Micro CLI to interactively run npm & yarn scripts."
edition = "2018"
license = "MIT"

[dependencies]
crossterm = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

[profile.release]
lto = true
opt-level = "s"
