[package]
name = "rsx"
version = "0.1.0"
authors = ["Vladislav Mamon <hello@vm.codes>"]
description = "Micro CLI for interactive execution of npm & yarn scripts."
edition = "2018"
license = "MIT"

[dependencies]
crossterm = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
structopt = "0.3"

[profile.release]
lto = true
opt-level = "s"
