[package]
name = "rsx"
version = "0.2.0"
authors = ["Vladislav Mamon <hello@vm.codes>"]
description = "Micro CLI for interactive execution of npm & yarn scripts."
edition = "2018"
license = "MIT"

[dependencies]
crossterm = { version = "0.26" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
clap = { version = "4.1.8", features = ["cargo", "wrap_help"] }

[[bin]]
name = "sx"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = "s"
panic = "abort"
