[package]
name = "rsx-app"
version = "0.1.0"
authors = ["Vladislav Mamon <norskeld@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
rsx-prompt = { path = "../rsx-prompt" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
rand = "0.8"
